[tool.poetry]
name = "virus-total"
version = "0.1.0"
description = "gets a csv file listing all urls to test and tests them again virus total"
authors = ["mickeyP <corp.mp@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
python-dotenv = "^0.15.0"
flake8 = "^3.8.3"
fastapi = "^0.60.1"
hypercorn = "^0.10.2"
#celery = "^4.4.6"
#redis = "^3.5.3"
pytest = "^6.1.2"
cachier = "^1.4.4"
attrs = "^20.3.0"
attr = "^0.3.1"
virustotal-python = "^0.1.0"
[tool.poetry.dev-dependencies]
flake8 = "^3.8.3"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
